# bilibili_sum

./: .env.example  .gitattributes  .gitignore  Dockerfile  PACKAGING_INSTALL_PLAN.md  README.md  REFACTOR_ARCHITECTURE.md  REFACTOR_TASK_BREAKDOWN.md  package.json  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  prepare-release.yml
apps/desktop/: announcement.md  electron-builder.config.js  index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/electron/: main.ts  preload.ts
apps/desktop/src/: App.tsx  api.ts  app.css  appModel.ts  desktop.d.ts  detailModel.ts  main.tsx  types.ts  utils.ts  videoPlayer.ts
apps/desktop/src/components/: AppIcons.tsx  CookieHelpDialog.tsx  FloatingNoticeStack.tsx  MarkdownContent.tsx  MultiPageSelectDialog.tsx  SetupAssistantDialog.tsx  TitleBar.tsx  UpdateDialog.tsx  VideoCard.tsx
apps/desktop/src/pages/: HomePage.tsx  LibraryPage.tsx  (+3 more)
apps/desktop/test/: api.test.ts  config-health.test.ts  detail-model.test.ts  markdown-utils.test.ts  run.ts  settings-page-config.test.ts  video-player.test.ts
apps/service/: pyproject.toml
apps/service/src/video_sum_service/: __init__.py  __main__.py  app.py  auth.py  context.py  integrations.py  main.py  repository.py  runtime_startup.py  runtime_support.py  schemas.py  settings_manager.py  task_artifacts.py  task_exports.py  video_assets.py  worker.py
apps/service/src/video_sum_service/knowledge/: __init__.py  index_service.py  local_llm.py  rag_service.py  tag_service.py
apps/service/src/video_sum_service/routers/: __init__.py  knowledge.py  system.py  tasks.py  videos.py
apps/web/static/: index.html  styles.css
docs/: bilisum-light-ui-spec.md  bilisum-ui-spec.md  briefvid-light-ui-spec.md  briefvid-ui-spec.md
docs/architecture/: bootstrap.md
packaging/desktop/: build_macos.sh  build_windows.ps1
packaging/installers/: README.md
packaging/pyinstaller/: README.md  bilisum.spec  briefvid.spec  build_onedir.py
scripts/: detect_bump.py  patch_electron_builder_rcedit.js  run_service.ps1  submit_task.ps1  validate_web_static_assets.js  versioning.py
tests/tmp_export_result/: knowledge_note.md  summary.json
tests/unit/: test_auth_api.py  test_bilibili_multi_page.py  test_generate_release_notes.py  test_knowledge_api.py  test_knowledge_repository.py  test_local_video_api.py  test_markdown_exports.py  test_prompt_api.py  test_prompt_library.py  test_real_pipeline_runner.py  test_runtime_paths.py  test_settings_api.py  test_task_events_stream.py  test_task_markdown_export_api.py  test_task_mindmap_api.py  test_task_models.py  test_task_repository.py  test_task_worker.py  test_web_local_video_upload.py
(+60 files in other folders)
