[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "briefvid-workspace"
version = "1.3.0"
description = "BriefVid local-first video summarizer workspace."
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = [
  "apps/service",
  "packages/core",
  "packages/infra",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
  "packages/core/src",
  "packages/infra/src",
  "apps/service/src",
]
