[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "bilisum-workspace"
version = "1.12.0"
description = "BiliSum local-first video summarizer workspace."
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.uv.workspace]
members = [
  "apps/service",
  "packages/core",
  "packages/infra",
]

[tool.uv]
package = false

[tool.uv.sources]
video-sum-core = { workspace = true }
video-sum-infra = { workspace = true }
video-sum-service = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
  "packages/core/src",
  "packages/infra/src",
  "apps/service/src",
]
