[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "video-sum-service"
version = "0.1.0"
description = "Local backend service for the video summarizer."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.34,<1.0",
  "pydantic>=2.10,<3.0",
  "video-sum-core",
  "video-sum-infra",
]

[project.scripts]
video-sum-service = "video_sum_service.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/video_sum_service"]
